cluster/apps/monitoring/dashboard/ingress-route.yaml
---
apiVersion: ingressroutes.traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: heimdall
          namespace: monitoring
          port: 80
          scheme: http
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "dashboard-${SECRET_DOMAIN/./-}-tls"
